# Universidad-CiberseguridadProlog

./: .gitignore  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json  setup.ps1  tsconfig.tsbuildinfo  vite.config.ts
backend/: csvService.js  package-lock.json  package.json  prologService.js  reportService.js  reporte.txt  sample.csv  server.js
backend/prolog/: baseConocimientoCiberseguridad.pl  combined.pl
backend/uploads/: upload_1779391364720.csv  upload_1779391388977.csv
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AlertCard.tsx  CSVModal.tsx  ChartsSection.tsx  LogsTable.tsx  ReportGenerator.tsx  StatsCard.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  scroll-area.tsx  select.tsx  tabs.tsx  toast.tsx  tooltip.tsx
src/data/: alerts.ts  blacklist.ts  logs.ts  prologRules.ts  reports.ts  stats.ts
src/hooks/: useAnimatedCounter.ts  useRealtimeClock.ts
src/layouts/: MainLayout.tsx  Sidebar.tsx  Topbar.tsx
src/lib/: utils.ts
src/pages/: Alerts.tsx  Blacklist.tsx  Dashboard.tsx  Logs.tsx  Reports.tsx  Settings.tsx
src/services/: api.ts  tauri.ts
src/store/: appStore.ts  logsStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: charts.ts  format.ts  mapper.ts
