[package]
name = "cyberlogic-audit"
version = "1.0.0"
description = "CyberLogic Audit - Sistema de Monitoreo de Ciberseguridad con Motor Prolog"
authors = ["CyberLogic Team"]
edition = "2021"

[lib]
name = "cyberlogic_audit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[package.metadata]
cargo-auditable = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
